reiniciando projeto com CRUD de gerentes funcionando

--- a/.env
+++ b/.env
@@ -16,5 +16,14 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=a9d1dd429bb9b92a276e652ea86b8cc7
+APP_SECRET=a3ad4cc729979d5f243ed6c64d35d4de
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/projeto?serverVersion=mariadb-10.8.3&charset=utf8mb4"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+###< doctrine/doctrine-bundle ###
